# epx

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.beads/: config.yaml  issues.jsonl
.claude/rules/naba/: naba-image-prompts.md  naba-tool-routing.md
.github/workflows/: ci.yml  release.yml
docs/diary/: 26-02-14.15-00.compliance-audit.md  26-02-14.18-00.plan-02-completion.md
docs/plans/: _index.md  plan-0003-06rzc.md  plan-0004-p0l8b.md  plan-0005-m4hd2.md  plan-0006.md  plan-01.md  plan-02.md
docs/research/: cli-design-patterns.md  epub-format.md  epub-to-markdown.md  markdown-linting.md  markdown-to-epub.md
docs/specifications/: PRD.md  TODO.md
docs/specifications/EDD/: CORE.md
docs/specifications/IG/: epub-assembly.md  epub-extraction.md  epub-manipulation.md  epub-reading.md
src/: error.rs  lib.rs  main.rs  util.rs
src/assemble/: asset_embed.rs  md_to_xhtml.rs  metadata_build.rs  mod.rs  package.rs  spine_build.rs
src/cli/: asset.rs  book.rs  chapter.rs  content.rs  metadata.rs  mod.rs  output.rs  spine.rs  toc.rs
src/epub/: container.rs  mod.rs  navigation.rs  opf.rs  reader.rs  writer.rs  zip_utils.rs
src/extract/: asset_extract.rs  chapter_org.rs  frontmatter.rs  html_to_md.rs  mod.rs  profile.rs  summary.rs
src/manipulate/: asset_manage.rs  chapter_manage.rs  content_edit.rs  meta_edit.rs  mod.rs  toc_edit.rs
tests/: asset_test.rs  book_test.rs  chapter_test.rs  content_test.rs  deep_regression_test.rs  metadata_test.rs  roundtrip_test.rs  spine_test.rs  toc_test.rs
tests/common/: mod.rs
(+4 files in other folders)
